# greeka-ferry-chatbot

./: README.md  admin_gtfs.py  app.py  config.py  data_processor.py  data_updater.py  db.py  dependencies.txt  direct_update.py  email_fetcher.py  ext.py  ferry_agent.py  forms.py  gtfs_scheduler.py  gtfs_scheduler_config.json  historical_data_loader.py  initialize_data.py  initialize_historical_data.py  main.py  migrate_database.py  models.py  new_data_loader.py  new_ferry_agent.py  new_main.py  new_models.py  previous_db.db  pyproject.toml  replit.nix  sqlite_loader.py  temp_data_loader.py  utils.py
agents/: agent_manager.py  price_agent.py  route_agent.py  schedule_agent.py  travel_agent.py
attached_assets/: GTFS Data _ for Chatbot (2).docx  Pasted--env-PS-C-Users-shoaib-Desktop-greeka-ferry-chatbot-python-initialize-data-py-2025-04-01-21-47-3-1743526060986.txt  Pasted-2025-04-01-21-42-51-423-main-INFO-Starting-database-initialization-2025-04-01-21-42-51-1743525801941.txt  Pasted-import-sqlite3-import-json-Function-to-create-tables-in-the-SQLite-database-def-create-tables-1743532876376.txt  agent.py  app.py  frontend.html  prompt.py  voice_agent.py
instance/: user_auth.db
prompts/: new_system_prompt.py  system_prompt.py
static/css/: style.css
static/js/: agent_selector.js  script.js
templates/: admin.html  admin_gtfs.html  api_status.html  base.html  home.html  index.html  login.html  register.html
tools/: ferry_tools.py
